# actix-extended-session

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: config.rs  lib.rs  middleware.rs  session.rs
src/storage/: cookie.rs  redis_rs.rs  session_key.rs
tests/: middleware.rs  opaque_errors.rs  session.rs
